--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ gen/
 .gradle/
 build/
 
+# idea files
+.idea/
+*.iml
+
+
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -71,3 +76,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.idea/.name
